# BigHomework

./: LICENSE  README.md  tongji-linux.txt
BilibiliRanking/: BilibiliAnalysis.md  BilibiliRanking.ipynb  B站排行榜数据分析.docx
BilibiliRanking/Databases/: rankboards.csv  users.csv  videos.csv
CornerDetector/: CMakeLists.txt  CompileG++.txt  FASTCorner.cpp  FASTCorner.h  HarrisCorner.cpp  HarrisCorner.h  fast  harris  test  testOpenCV.cpp
DecisionTree/: DatasetClass.py  DecicisonTree.py  DecisionTreeClass.py  DecisionTreeNodeClass.py  DecisionTreeVisiualize.py  DivisionChoiceFunction.py  GenerateDecicisonTree.py  ReadDataset.py  Test.py  TrainDecicisonTree.py  UserToolFunction.py  readme.html  readme.md
DecisionTree/Datasets/: IncompleteDataset.txt  IrisDataset.csv  MelonDataset2.txt  MelonDataset2alpha.csv  MelonDataset2alpha.txt  MelonDataset3.txt  TestDataset.txt  test.ipynb
DecisionTree/DecisionTreeVisualization/: TestGraphviz.dot  test.py
DecisionTree/Rubbish/: DatasetFunction.py  (+1 more)
HarrisCornerDetector/: CMakeLists.txt  HarrisCorner.cpp  Test.cpp  test  testOpenCV.cpp
HarrisCornerDetector/Test/: CMakeLists.txt  Test.cpp
New/: 2022_ML_FP.rar  Columns_Description.txt  data-analysis-example.ipynb
RoadTrafficInjury/: 1950083刘智宇 copy.ipynb  1950083刘智宇.ipynb  FeatureAnalysis.md  RoadTrafficInjury.ipynb  Summary.md  data-analysis-example.ipynb  injury.txt  submit.rar  test.ipynb  tryBanAllObjectFeature.ipynb  v2.ipynb  v3.ipynb  交通事故中人员伤亡多分类预测.pptx
多机并行加速/: bighw_report.html  readme.md
字符串类&矩阵类/: Class_and_Object.sln
系统编程大作业-1950083-1950089/: bighw_report.md
(+112 files in other folders)
